gatekeeper/templates/required-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels

      provided_labels[label] {
        input.review.object.metadata.labels[label]
      }

      required_labels[label] {
        label := input.parameters.labels[_]
      }

      missing_labels[label] {
        label := required_labels[_]
        not provided_labels[label]
      }

      violation[{"msg": msg}] {
        count(missing_labels) > 0
        msg := sprintf("missing required labels: %v", [missing_labels])
      }
